Feat: Update proto and apply api
