# streamgolib/gen/proto/go/stream_auth_server/v1/stream_auth_server.pb.gw.go
@@ -230,14 +230,14 @@ func request_StreamAuthService_GetPlayerInfo_0(ctx context.Context, marshaler ru
 		_   = err
 	)
 
-	val, ok = pathParams["user_id"]
+	val, ok = pathParams["player_id"]
 	if !ok {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "user_id")
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "player_id")
 	}
 
-	protoReq.UserId, err = runtime.String(val)
+	protoReq.PlayerId, err = runtime.Int32(val)
 	if err != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "user_id", err)
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "player_id", err)
 	}
 
 	msg, err := client.GetPlayerInfo(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
@@ -256,14 +256,14 @@ func local_request_StreamAuthService_GetPlayerInfo_0(ctx context.Context, marsha
 		_   = err
 	)
 
-	val, ok = pathParams["user_id"]
+	val, ok = pathParams["player_id"]
 	if !ok {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "user_id")
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "player_id")
 	}
 
-	protoReq.UserId, err = runtime.String(val)
+	protoReq.PlayerId, err = runtime.Int32(val)
 	if err != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "user_id", err)
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "player_id", err)
 	}
 
 	msg, err := server.GetPlayerInfo(ctx, &protoReq)
@@ -283,6 +283,23 @@ func request_StreamAuthService_UpdatePlayer_0(ctx context.Context, marshaler run
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
 
+	var (
+		val string
+		ok  bool
+		err error
+		_   = err
+	)
+
+	val, ok = pathParams["player_id"]
+	if !ok {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "player_id")
+	}
+
+	protoReq.PlayerId, err = runtime.Int32(val)
+	if err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "player_id", err)
+	}
+
 	msg, err := client.UpdatePlayer(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
 	return msg, metadata, err
 
@@ -300,7 +317,92 @@ func local_request_StreamAuthService_UpdatePlayer_0(ctx context.Context, marshal
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
 
+	var (
+		val string
+		ok  bool
+		err error
+		_   = err
+	)
+
+	val, ok = pathParams["player_id"]
+	if !ok {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "player_id")
+	}
+
+	protoReq.PlayerId, err = runtime.Int32(val)
+	if err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "player_id", err)
+	}
+
 	msg, err := server.UpdatePlayer(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
+func request_StreamAuthService_DeletePlayer_0(ctx context.Context, marshaler runtime.Marshaler, client StreamAuthServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GetPlayerInfoRequest
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	var (
+		val string
+		ok  bool
+		err error
+		_   = err
+	)
+
+	val, ok = pathParams["player_id"]
+	if !ok {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "player_id")
+	}
+
+	protoReq.PlayerId, err = runtime.Int32(val)
+	if err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "player_id", err)
+	}
+
+	msg, err := client.DeletePlayer(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_StreamAuthService_DeletePlayer_0(ctx context.Context, marshaler runtime.Marshaler, server StreamAuthServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GetPlayerInfoRequest
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	var (
+		val string
+		ok  bool
+		err error
+		_   = err
+	)
+
+	val, ok = pathParams["player_id"]
+	if !ok {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "player_id")
+	}
+
+	protoReq.PlayerId, err = runtime.Int32(val)
+	if err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "player_id", err)
+	}
+
+	msg, err := server.DeletePlayer(ctx, &protoReq)
 	return msg, metadata, err
 
 }
@@ -438,7 +540,7 @@ func RegisterStreamAuthServiceHandlerServer(ctx context.Context, mux *runtime.Se
 		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
-		ctx, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/stream_auth_server.v1.StreamAuthService/GetPlayerInfo", runtime.WithHTTPPathPattern("/v1/playerinfo/{user_id}"))
+		ctx, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/stream_auth_server.v1.StreamAuthService/GetPlayerInfo", runtime.WithHTTPPathPattern("/v1/playerinfo/{player_id}"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -462,7 +564,7 @@ func RegisterStreamAuthServiceHandlerServer(ctx context.Context, mux *runtime.Se
 		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
-		ctx, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/stream_auth_server.v1.StreamAuthService/UpdatePlayer", runtime.WithHTTPPathPattern("/v1/playerinfo/update"))
+		ctx, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/stream_auth_server.v1.StreamAuthService/UpdatePlayer", runtime.WithHTTPPathPattern("/v1/playerinfo/update/{player_id}"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -476,6 +578,30 @@ func RegisterStreamAuthServiceHandlerServer(ctx context.Context, mux *runtime.Se
 		}
 
 		forward_StreamAuthService_UpdatePlayer_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("POST", pattern_StreamAuthService_DeletePlayer_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		ctx, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/stream_auth_server.v1.StreamAuthService/DeletePlayer", runtime.WithHTTPPathPattern("/v1/playerinfo/delete/{player_id}"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_StreamAuthService_DeletePlayer_0(ctx, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_StreamAuthService_DeletePlayer_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -630,7 +756,7 @@ func RegisterStreamAuthServiceHandlerClient(ctx context.Context, mux *runtime.Se
 		defer cancel()
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
-		ctx, err = runtime.AnnotateContext(ctx, mux, req, "/stream_auth_server.v1.StreamAuthService/GetPlayerInfo", runtime.WithHTTPPathPattern("/v1/playerinfo/{user_id}"))
+		ctx, err = runtime.AnnotateContext(ctx, mux, req, "/stream_auth_server.v1.StreamAuthService/GetPlayerInfo", runtime.WithHTTPPathPattern("/v1/playerinfo/{player_id}"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -651,7 +777,7 @@ func RegisterStreamAuthServiceHandlerClient(ctx context.Context, mux *runtime.Se
 		defer cancel()
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
-		ctx, err = runtime.AnnotateContext(ctx, mux, req, "/stream_auth_server.v1.StreamAuthService/UpdatePlayer", runtime.WithHTTPPathPattern("/v1/playerinfo/update"))
+		ctx, err = runtime.AnnotateContext(ctx, mux, req, "/stream_auth_server.v1.StreamAuthService/UpdatePlayer", runtime.WithHTTPPathPattern("/v1/playerinfo/update/{player_id}"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -664,6 +790,27 @@ func RegisterStreamAuthServiceHandlerClient(ctx context.Context, mux *runtime.Se
 		}
 
 		forward_StreamAuthService_UpdatePlayer_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("POST", pattern_StreamAuthService_DeletePlayer_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		ctx, err = runtime.AnnotateContext(ctx, mux, req, "/stream_auth_server.v1.StreamAuthService/DeletePlayer", runtime.WithHTTPPathPattern("/v1/playerinfo/delete/{player_id}"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_StreamAuthService_DeletePlayer_0(ctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_StreamAuthService_DeletePlayer_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -681,9 +828,11 @@ var (
 
 	pattern_StreamAuthService_CreatePlayerInfo_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "playerinfo", "create"}, ""))
 
-	pattern_StreamAuthService_GetPlayerInfo_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "playerinfo", "user_id"}, ""))
+	pattern_StreamAuthService_GetPlayerInfo_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "playerinfo", "player_id"}, ""))
 
-	pattern_StreamAuthService_UpdatePlayer_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "playerinfo", "update"}, ""))
+	pattern_StreamAuthService_UpdatePlayer_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"v1", "playerinfo", "update", "player_id"}, ""))
+
+	pattern_StreamAuthService_DeletePlayer_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"v1", "playerinfo", "delete", "player_id"}, ""))
 )
 
 var (
@@ -700,4 +849,6 @@ var (
 	forward_StreamAuthService_GetPlayerInfo_0 = runtime.ForwardResponseMessage
 
 	forward_StreamAuthService_UpdatePlayer_0 = runtime.ForwardResponseMessage
+
+	forward_StreamAuthService_DeletePlayer_0 = runtime.ForwardResponseMessage
 )
